--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -44,13 +44,13 @@ jobs:
       #默认主题
       WRT_THEME: design
       #默认主机名
-      WRT_NAME: ATHEROS
+      WRT_NAME: Lai
       #默认WIFI名称
       WRT_SSID: ATHEROS
       #默认WIFI密码
       WRT_WORD: 12345678
       #默认地址
-      WRT_IP: 192.168.88.254
+      WRT_IP: 10.10.10.1
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #源码链接
